--- a/IIFYM/build.gradle
+++ b/IIFYM/build.gradle
@@ -38,6 +38,7 @@ dependencies {
 //    compile 'com.google.firebase:firebase-database:9.6.0'
 //    compile 'com.google.android.gms:play-services:9.6.0'
     // MOBILE
+    compile 'com.google.firebase:firebase-core:10.2.6'
     compile 'com.google.firebase:firebase-auth:10.2.6'
     compile 'com.google.firebase:firebase-database:10.2.6'
     compile 'com.google.android.gms:play-services-auth:10.2.6'
