--- a/IIFYM/build.gradle
+++ b/IIFYM/build.gradle
@@ -11,6 +11,16 @@ android {
         versionName "1.2"
         multiDexEnabled true
     }
+
+    signingConfigs {
+        debug {
+            storeFile file('./debug.keystore')
+            storePassword "android"
+            keyAlias "androiddebugkey"
+            keyPassword "android"
+        }
+    }
+
     buildTypes {
         release {
             minifyEnabled false
