--- a/IIFYM/src/main/AndroidManifest.xml
+++ b/IIFYM/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.karimchehab.IIFYM_Tracker">
+    package="com.karimchehab.IIFYM">
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -14,7 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name="com.karimchehab.IIFYM_Tracker.Activities.Main.activityHome"
+            android:name="com.karimchehab.IIFYM.Activities.Main.activityHome"
             android:label="@string/appName"
             android:launchMode="singleInstance"
             android:theme="@style/AppTheme.NoActionBar">
@@ -24,35 +24,35 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.karimchehab.IIFYM_Tracker.Activities.Main.activityFoodManager"
+            android:name="com.karimchehab.IIFYM.Activities.Main.activityFoodManager"
             android:label="@string/toolbarTapOnAnItemToEdit" />
         <activity
-            android:name="com.karimchehab.IIFYM_Tracker.Activities.Main.activityEditFood"
+            android:name="com.karimchehab.IIFYM.Activities.Main.activityEditFood"
             android:label="@string/toolbarEditFood" />
         <activity
-            android:name="com.karimchehab.IIFYM_Tracker.Activities.Main.activityCreateFood"
+            android:name="com.karimchehab.IIFYM.Activities.Main.activityCreateFood"
             android:label="@string/toolbarCreateNewFood" />
         <activity
-            android:name="com.karimchehab.IIFYM_Tracker.Activities.UserLoginAuthentication.activityRegisterProfile"
+            android:name="com.karimchehab.IIFYM.Activities.UserLoginAuthentication.activityRegisterProfile"
             android:label="@string/toolbarUserInfo" />
         <activity
-            android:name="com.karimchehab.IIFYM_Tracker.Activities.UserLoginAuthentication.activityRegisterGoals"
+            android:name="com.karimchehab.IIFYM.Activities.UserLoginAuthentication.activityRegisterGoals"
             android:label="@string/toolbarUserMacros" />
         <activity
-            android:name="com.karimchehab.IIFYM_Tracker.Activities.Main.activityAddDailyItem"
+            android:name="com.karimchehab.IIFYM.Activities.Main.activityAddDailyItem"
             android:label="@string/toolbarAddDailyItem" />
         <activity
-            android:name="com.karimchehab.IIFYM_Tracker.Activities.Main.activitySelectDailyItem"
+            android:name="com.karimchehab.IIFYM.Activities.Main.activitySelectDailyItem"
             android:label="@string/toolbarSelectItemToAdd" />
         <activity android:name=".Activities.Main.activityViewDailyItem" />
         <activity
             android:name=".Activities.Settings.activitySettings"
             android:label="Settings" />
-            android:name="com.karimchehab.IIFYM_Tracker.Activities.Main.activityCreateMeal"
+            android:name="com.karimchehab.IIFYM.Activities.Main.activityCreateMeal"
             android:label="@string/toolbarCreateNewMeal" />
         <activity android:name=".Activities.Main.activtitySelectMealIngredients" />
         <activity
-            android:name="com.karimchehab.IIFYM_Tracker.Activities.Misc.activityAbout"
+            android:name="com.karimchehab.IIFYM.Activities.Misc.activityAbout"
             android:label="About" />
         <activity android:name=".Activities.UserLoginAuthentication.activitySelectAuthentication" />
         <activity android:name=".Activities.UserLoginAuthentication.activityLoginEmail"></activity>
