--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@ gen/
 
 # Local configuration file (sdk path, etc)
 local.properties
+Credentials.java
+*.keystore
 
 # Windows thumbnail db
 Thumbs.db
@@ -28,15 +30,16 @@ Thumbs.db
 # Android Studio
 *.iml
 .idea
-#.idea/workspace.xml - remove # and delete .idea if it better suit your needs.
+_windows
+
 .gradle
-build/
 
 #NDK
 
 obj/
 /*/out
 /*/*/build
+build/
 /*/*/production
 *.iws
 *.ipr
@@ -44,12 +47,24 @@ obj/
 *.swp
 
 /local.properties
-/.idea/workspace.xml
-/.idea/libraries
-/build
 /captures
 .externalNativeBuildz
+/inspection
 
-/_windows
-IIFYM/src/main/java/com/karimchehab/IIFYM_Tracker/Database/Credentials.java
-*.keystore
+androidEditors.xml
+androidStudioFirstRun.xml
+customization.xml
+debugger.xml
+diff.xml
+editor.codeinsight.xml
+filetypes.xml
+find.xml
+github_settings.xml
+ignore.xml
+IntelliLang.xml
+intentionSettings.xml
+project.default.xml
+ui.lnf.xml
+usageView.xml
+vcs.xml
+web-browsers.xml
