--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name="com.karimchehab.IIFYM.Activities.Main.activityHome"
+            android:name="com.karimchehab.IIFYM.Activities.Application.ActivityHome"
             android:label="@string/appName"
             android:launchMode="singleInstance"
             android:theme="@style/AppTheme.NoActionBar">
@@ -24,38 +24,38 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.karimchehab.IIFYM.Activities.Main.activityFoodManager"
+            android:name="com.karimchehab.IIFYM.Activities.Application.ActivityFoodManager"
             android:label="@string/toolbarTapOnAnItemToEdit" />
         <activity
-            android:name="com.karimchehab.IIFYM.Activities.Main.activityEditFood"
+            android:name="com.karimchehab.IIFYM.Activities.Application.ActivityEditFood"
             android:label="@string/toolbarEditFood" />
         <activity
-            android:name="com.karimchehab.IIFYM.Activities.Main.activityCreateFood"
+            android:name="com.karimchehab.IIFYM.Activities.Application.ActivityCreateFood"
             android:label="@string/toolbarCreateNewFood" />
         <activity
-            android:name="com.karimchehab.IIFYM.Activities.UserLoginAuthentication.activityRegisterProfile"
+            android:name="com.karimchehab.IIFYM.Activities.Authentication.ActivityRegisterProfile"
             android:label="@string/toolbarUserInfo" />
         <activity
-            android:name="com.karimchehab.IIFYM.Activities.UserLoginAuthentication.activityRegisterGoals"
+            android:name="com.karimchehab.IIFYM.Activities.Authentication.ActivityRegisterGoals"
             android:label="@string/toolbarUserMacros" />
         <activity
-            android:name="com.karimchehab.IIFYM.Activities.Main.activityAddDailyItem"
+            android:name="com.karimchehab.IIFYM.Activities.Application.ActivityAddDailyItem"
             android:label="@string/toolbarAddDailyItem" />
         <activity
-            android:name="com.karimchehab.IIFYM.Activities.Main.activitySelectDailyItem"
+            android:name="com.karimchehab.IIFYM.Activities.Application.ActivitySelectDailyItem"
             android:label="@string/toolbarSelectItemToAdd" />
-        <activity android:name=".Activities.Main.activityViewDailyItem" />
+        <activity android:name=".Activities.Application.ActivityViewDailyItem" />
         <activity
-            android:name=".Activities.Settings.activitySettings"
+            android:name=".Activities.Settings.ActivitySettings"
             android:label="Settings" />
             android:name="com.karimchehab.IIFYM.Activities.Main.activityCreateMeal"
             android:label="@string/toolbarCreateNewMeal" />
-        <activity android:name=".Activities.Main.activtitySelectMealIngredients" />
+        <activity android:name=".Activities.Application.ActivtitySelectMealIngredients" />
         <activity
-            android:name="com.karimchehab.IIFYM.Activities.Misc.activityAbout"
+            android:name="com.karimchehab.IIFYM.Activities.Static.ActivityAbout"
             android:label="About" />
-        <activity android:name=".Activities.UserLoginAuthentication.activitySelectAuthentication" />
-        <activity android:name=".Activities.UserLoginAuthentication.activityLoginEmail"></activity>
+        <activity android:name=".Activities.Authentication.ActivitySelectAuthentication" />
+        <activity android:name=".Activities.Authentication.ActivityLoginEmail"></activity>
     </application>
 
 </manifest>
