--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,14 @@
 language: android
 jdk:
   - oraclejdk8
+android:
+  components:
+    - build-tools-25.0.3
+    - android-25
+    - extra-google-google_play_services
+    - extra-google-m2repository
+    - extra-android-m2repository
+    - addon-google_apis-google-19
 before_install:
   - chmod +x gradlew
 before_cache:
@@ -10,5 +18,6 @@ cache:
   directories:
     - $HOME/.gradle/caches/
     - $HOME/.gradle/wrapper/
+    - $HOME/.android/build-cache
 scripts:
   - ./gradlew clean assemble lint
