--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,9 @@ android {
         abortOnError false
         warningsAsErrors false
     }
+    dexOptions {
+        incremental true
+    }
 }
 repositories {
     mavenCentral()
@@ -51,20 +54,19 @@ repositories {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile('com.github.worker8:tourguide:1.0.17-SNAPSHOT@aar') {
         transitive = true
     }
     compile project(':ProgressBar')
     // EMULATOR
-//    compile 'com.google.firebase:firebase-auth:9.6.0'
-//    compile 'com.google.firebase:firebase-database:9.6.0'
-//    compile 'com.google.android.gms:play-services:9.6.0'
+    //    compile 'com.google.firebase:firebase-auth:9.6.0'
+    //    compile 'com.google.firebase:firebase-database:9.6.0'
+    //    compile 'com.google.android.gms:play-services:9.6.0'
     // MOBILE
-    compile 'com.google.firebase:firebase-core:10.2.6'
-    compile 'com.google.firebase:firebase-auth:10.2.6'
-    compile 'com.google.firebase:firebase-database:10.2.6'
-    compile 'com.google.android.gms:play-services-auth:10.2.6'
+    compile 'com.google.firebase:firebase-core:11.0.0'
+    compile 'com.google.firebase:firebase-auth:11.0.0'
+    compile 'com.google.firebase:firebase-database:11.0.0'
+    compile 'com.google.android.gms:play-services-auth:11.0.0'
     compile 'com.github.clans:fab:1.6.4'
     compile 'co.infinum:materialdatetimepicker-support:3.1.3'
     compile 'com.android.support:appcompat-v7:26.+'
@@ -77,8 +79,6 @@ dependencies {
     compile 'com.getbase:floatingactionbutton:1.10.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-beta5'
     testCompile 'junit:junit:4.12'
-    compile 'com.google.android.gms:play-services:10.2.6'
-
     compile 'com.fatsecret4j:fatsecret-platform:2.0'
     compile 'com.android.volley:volley:1.0.0'
 }
