--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion '26.0.0'
+    compileSdkVersion 25
+    buildToolsVersion '25.0.3'
     defaultConfig {
         applicationId 'com.karimchehab.IIFYM'
         minSdkVersion 24
-        targetSdkVersion 26
+        targetSdkVersion 25
         versionCode 6
         versionName "1.5"
         multiDexEnabled true
@@ -42,9 +42,6 @@ android {
         abortOnError false
         warningsAsErrors false
     }
-    dexOptions {
-        incremental true
-    }
 }
 repositories {
     mavenCentral()
@@ -69,9 +66,9 @@ dependencies {
     compile 'com.google.android.gms:play-services-auth:11.0.0'
     compile 'com.github.clans:fab:1.6.4'
     compile 'co.infinum:materialdatetimepicker-support:3.1.3'
-    compile 'com.android.support:appcompat-v7:26.+'
-    compile 'com.android.support:design:26.+'
-    compile 'com.android.support:support-v4:26.+'
+    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support:design:25.3.1'
+    compile 'com.android.support:support-v4:25.3.1'
     compile 'com.github.lecho:hellocharts-library:1.5.8@aar'
     compile 'com.afollestad.material-dialogs:core:0.9.1.0'
     compile 'com.androidadvance:topsnackbar:1.1.1'
