--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
         </activity>
         <activity
             android:name="com.karimchehab.IIFYM.Activities.Application.ActivityFoodManager"
-            android:label="@string/toolbarManageYourFood" />
+            android:label="@string/toolbarManageSavedFood" />
         <activity
             android:name="com.karimchehab.IIFYM.Activities.Application.ActivityEditFood"
             android:label="@string/toolbarEditFood" />
@@ -46,7 +46,8 @@
         <activity
             android:name=".Activities.Settings.ActivitySettings"
             android:label="Settings" />
-            android:name="com.karimchehab.IIFYM.Activities.Main.activityCreateMeal"
+        <activity
+            android:name="com.karimchehab.IIFYM.Activities.Application.ActivityCreateMeal"
             android:label="@string/toolbarCreateNewMeal" />
         <activity android:name=".Activities.Application.ActivtitySelectMealIngredients" />
         <activity
