--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,69 +28,41 @@
         </activity>
         <activity
             android:name="com.karimchehab.IIFYM.Activities.Application.ActivityFoodManager"
-            android:configChanges="orientation"
-            android:label="@string/toolbarManageYourFood"
-            android:screenOrientation="portrait" />
+            android:label="@string/toolbarManageYourFood" />
         <activity
             android:name="com.karimchehab.IIFYM.Activities.Application.ActivityEditFood"
-            android:configChanges="orientation"
-            android:label="@string/toolbarEditFood"
-            android:screenOrientation="portrait" />
+            android:label="@string/toolbarEditFood" />
         <activity
             android:name="com.karimchehab.IIFYM.Activities.Application.ActivityCreateFood"
-            android:configChanges="orientation"
-            android:label="@string/toolbarCreateNewFood"
-            android:screenOrientation="portrait" />
+            android:label="@string/toolbarCreateNewFood" />
         <activity
             android:name="com.karimchehab.IIFYM.Activities.Authentication.ActivityRegisterProfile"
-            android:configChanges="orientation"
-            android:label="@string/toolbarUserInfo"
-            android:screenOrientation="portrait" />
+            android:label="@string/toolbarUserInfo" />
         <activity
             android:name="com.karimchehab.IIFYM.Activities.Authentication.ActivityRegisterGoals"
-            android:configChanges="orientation"
-            android:label="@string/toolbarUserMacros"
-            android:screenOrientation="portrait" />
+            android:label="@string/toolbarUserMacros" />
         <activity
             android:name="com.karimchehab.IIFYM.Activities.Application.ActivityAddDailyItem"
-            android:configChanges="orientation"
-            android:label="@string/toolbarAddDailyItem"
-            android:screenOrientation="portrait" />
+            android:label="@string/toolbarAddDailyItem" />
         <activity
-            android:name=".Activities.Application.ActivityViewDailyItem"
-            android:configChanges="orientation"
-            android:screenOrientation="portrait" />
+            android:name=".Activities.Application.ActivityViewDailyItem" />
         <activity
             android:name=".Activities.Settings.ActivitySettings"
-            android:configChanges="orientation"
-            android:label="Settings"
-            android:screenOrientation="portrait" />
+            android:label="Settings" />
         <activity
             android:name="com.karimchehab.IIFYM.Activities.Application.ActivityCreateMeal"
-            android:configChanges="orientation"
-            android:label="@string/toolbarCreateNewMeal"
-            android:screenOrientation="portrait" />
+            android:label="@string/toolbarCreateNewMeal" />
         <activity
-            android:name=".Activities.Application.ActivtitySelectMealIngredients"
-            android:configChanges="orientation"
-            android:screenOrientation="portrait" />
+            android:name=".Activities.Application.ActivtitySelectMealIngredients" />
         <activity
             android:name="com.karimchehab.IIFYM.Activities.Static.ActivityAbout"
-            android:configChanges="orientation"
-            android:label="About"
-            android:screenOrientation="portrait" />
+            android:label="About" />
         <activity
-            android:name=".Activities.Authentication.ActivitySelectAuthentication"
-            android:configChanges="orientation"
-            android:screenOrientation="portrait" />
+            android:name=".Activities.Authentication.ActivitySelectAuthentication" />
         <activity
-            android:name=".Activities.Authentication.ActivityLoginEmail"
-            android:configChanges="orientation"
-            android:screenOrientation="portrait"></activity>
+            android:name=".Activities.Authentication.ActivityLoginEmail" />
         <activity
-            android:name=".Activities.Application.ActivityFoodSearch"
-            android:configChanges="orientation"
-            android:screenOrientation="portrait" />
+            android:name=".Activities.Application.ActivityFoodSearch" />
     </application>
 
 </manifest>
